--- a/Dockerfile.example
+++ b/Dockerfile.example
@@ -1,5 +1,5 @@
-FROM alpine:3.12
-RUN apk add --no-cache util-linux bash
+FROM alpine:3.14
+RUN apk add --no-cache bash
 WORKDIR /code
 COPY . .
 ENTRYPOINT [ "bash", "/code/entrypoint.sh" ]
