added publish example to dockerhub

--- a/.github/workflows/publish-latest.yml
+++ b/.github/workflows/publish-latest.yml
@@ -23,3 +23,14 @@ jobs:
       - name: Test with bash script
         run: |
           bash tests.sh
+  push-dockerhub:
+    needs: [test-ubuntu, test-macos, test-wsl]
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Build and push
+        run: |
+          export DOCKER_TAG="unfor19/bash-logging:latest"
+          docker build . --file Dockerfile.example --tag "${DOCKER_TAG}"
+          echo '${{ secrets.DOCKER_PASSWORD }}' | docker login --username ${{ secrets.DOCKER_USERNAME }} --password-stdin
+          docker push "${DOCKER_TAG}"
