--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -5,10 +5,6 @@ on:
     paths-ignore:
       - "README.md"
 
-env:
-  SRC_FILE_PATH: "loggingsh.md"
-  DST_FILE_PATH: "README.md"
-
 jobs:
   update-readme:
     runs-on: ubuntu-latest
@@ -16,12 +12,12 @@ jobs:
       - uses: actions/checkout@v2
       - name: Prepare tests.sh output
         run: |
-          echo -e "\`\`\`\n$$(tail -n +3 "$$SRC_FILE_PATH")\n\`\`\`" > "$${SRC_FILE_PATH}"
+          echo -e "\`\`\`\n$$(tail -n +3 "loggingsh.md")\n\`\`\`" > "loggingsh.md"
       - uses: unfor19/replacer-action@master
         name: Update README.md file
         with:
-          src-file-path: ${{ fromJSON(env.SRC_FILE_PATH) }}
-          dst-file-path: ${{ fromJSON(env.DST_FILE_PATH) }}
+          src-file-path: "loggingsh.md"
+          dst-file-path: "README.md"
           start-value: "<!-- loggingsh_start -->"
           end-value: "<!-- loggingsh_end -->"
           git-user-name: "GitHub Actions"
